# lotus

./: .gitignore  CLAUDE.md  CLI_README.md  CLI_RESEARCH.md  CLI_SUMMARY.md  CONTRIBUTING.md  QUICK_START.md  README.md  lotus_cli.py  lotus_pipeline.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_improvement.md  feature_request.md  performance_issue.md
.github/tests/: lm_tests.py  multimodality_tests.py  utility_operators_tests.py
.github/workflows/: tests.yml
docs/: DirectoryReader.rst  approximation_cascades.rst  configurations.rst  evals.rst  examples.rst  index.rst  llm.rst  prompt_strategies.rst  reasoning_models.rst  reranker_models.rst  retriever_models.rst  sem_cluster.rst  sem_dedup.rst  sem_filter.rst  sem_index.rst  sem_join.rst  sem_map.rst  sem_partition.rst  sem_sim_join.rst  usage.rst  vector_store.rst  web_search.rst
examples/cli_examples/: EMBEDDING_EXAMPLES.md  README.md  data_cleaning_pipeline.yaml  embedding_cluster_example.yaml  embedding_dedup_example.yaml  embedding_fuzzy_join_example.yaml  embedding_search_example.yaml  research_pipeline.yaml
examples/eval_examples/: llm_as_judge.py  llm_as_judge_response_format.py  pairwise_eval.py
examples/model_examples/: deepseek.py  ollama.py  openai.py
examples/op_examples/: agg_with_grouping.py  cluster.py  dedup.py  dedup_model2vec.py  extract_cot.py  extract_deepseek_cot.py  filter_cot.py  filter_deepseek_cot.py  join_cascade.py  map_deepseek_cot.py  partition.py  search.py  search_model2vec.py  top_k_deepseek_cot.py
examples/vs_examples/: search_faiss.py  search_qdrant.py  search_weaviate.py
lotus/: pricing.py  types.py  utils.py
lotus/models/: __init__.py  lm.py  model2vec_rm.py  sentence_transformers_rm.py
lotus/sem_ops/: load_sem_index.py  postprocessors.py  sem_agg.py  sem_cluster_by.py  sem_extract.py  sem_filter.py  sem_index.py  sem_join.py  sem_map.py  sem_partition_by.py  sem_search.py  sem_sim_join.py  sem_topk.py
lotus/templates/: task_instructions.py
lotus/vector_store/: __init__.py  vicinity_vs.py
tests/: connector_tests.py  deepseek_cot_tests.py  test_extract_cot.py  test_lm.py  test_pricing.py
